# tplink-tool

./: README.md  cli.py  configure_vlans.py  pyproject.toml  sg108e.py  test_read.py  tplink_switch.py
docs/: cli.md  sdk.md
src/tplink_tool/: __init__.py  _cli.py
tests/: test_live.py  test_parser.py  test_switch_mocked.py
